# DOOM_SCROLL

./: .gitignore  .gitmodules  LICENSE  README.md  config.yaml  main.py  pyproject.toml  skills-lock.json
.github/workflows/: digest.yml  weekly.yml
docs/: 2026-04-03.html  2026-04-04.html  2026-04-05.html  2026-04-06.html  2026-04-07.html  2026-04-08.html  2026-04-09.html  2026-04-10.html  2026-04-11.html  2026-04-12.html  2026-04-13.html  2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-18.html  2026-04-19.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-25.html  2026-04-26.html  2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  (+35 more)
outputs/: digest.json  digest.md
skills/: document-processing
src/paper_digest/: main.py  models.py
src/paper_digest/delivery/: email_sender.py
src/paper_digest/enrich/: arxiv_enrich.py  hn_match.py
src/paper_digest/extract/: article_text.py
src/paper_digest/ingest/: arxiv_ingest.py  github_ingest.py  hf_ingest.py  hn_ingest.py  pwc_ingest.py  rss_ingest.py
src/paper_digest/rank/: explain.py  scoring.py  topics.py
src/paper_digest/render/: digest_html.py  digest_md.py  rss_out.py  site_builder.py  weekly.py
src/paper_digest/render/templates/: archive.html  email.html  index.html
src/paper_digest/summarize/: extractive.py
src/paper_digest/util/: history.py  logging.py  time_filter.py
tests/: test_pipeline.py
